# plant-disease-project

./: .gitignore  404.html  GITHUB_PAGES_SETUP.md  README.md  index.html  pyproject.toml  vercel.json
.github/workflows/: deploy.yml
static/: index.html  sw.js
static/js/: offline.js  online.js
